change to https for php

--- a/namemaker/index.html
+++ b/namemaker/index.html
@@ -820,7 +820,7 @@
                 formData.append('filename', filename);
 
                 // Send a POST request to the server-side PHP script to save the file
-                fetch('http://www.timbergeron.com/name/save-name.php', {
+                fetch('https://www.timbergeron.com/name/save-name.php', {
                     method: 'POST',
                     body: formData,
                 })
