update git links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <footer>
         Created by woods &nbsp;&nbsp;|&nbsp;&nbsp; <a
-        href="https://github.com/q1tools"><i class="fa-brands fa-github"></a></i>
+        href="https://github.com/q1tools/q1tools.github.io"><i class="fa-brands fa-github"></a></i>
     </footer>
 </body>
 </html>
