--- a/namemaker/index.html
+++ b/namemaker/index.html
@@ -1133,7 +1133,7 @@
     </form>
 </div>
 <div id="footer">
-    Created by <span class="bronze">w</span>ood<span class="bronze">s</span> &nbsp;&nbsp;| &nbsp;&nbsp;<a href="https://github.com/q1tools"><i class="fa-brands fa-github"></i></a>
+    Created by <span class="bronze">w</span>ood<span class="bronze">s</span> &nbsp;&nbsp;| &nbsp;&nbsp;<a href="https://github.com/q1tools/q1tools.github.io"><i class="fa-brands fa-github"></i></a>
 </div>
 </body>
 
