--- a/pak/index.html
+++ b/pak/index.html
@@ -1387,7 +1387,7 @@
     </script>
     <div id="footer">
         Created by <span class="bronze">w</span>ood<span class="bronze">s</span> &nbsp;&nbsp;| &nbsp;&nbsp;<a
-            href="https://github.com/q1tools"><i class="fa-brands fa-github"></i></a>
+            href="https://github.com/q1tools/q1tools.github.io"><i class="fa-brands fa-github"></i></a>
     </div>
 </body>
 
