add lmp and tga tools

--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
 </head>
 <body>
     <div class="container">
-        <a href="pak/" class="clickable-div"><img src="pak.png">PAK Tool</a>
-        <a href="namemaker/" class="clickable-div"><img src="namemaker.png">Name Maker</a>
-        
+        <div class="row">
+            <a href="pak/" class="clickable-div"><img src="pak.png">PAK Tool</a>
+            <a href="namemaker/" class="clickable-div"><img src="namemaker.png">Name Maker</a>
+        </div>
+        <div class="row">
+            <a href="lmp/" class="clickable-div"><img src="lmp/lmp.png">LMP Creator</a>
+            <a href="tga/" class="clickable-div"><img src="tga/tga.png">TGA Converter</a>
+
+            <!-- Add more .clickable-div as needed -->
+        </div>
+        <!-- Add more .row as needed -->
     </div>
     <footer>
         Created by woods &nbsp;&nbsp;|&nbsp;&nbsp; <a
