--- a/tga/index.html
+++ b/tga/index.html
@@ -72,6 +72,13 @@
             URL.revokeObjectURL(url);
         }
 
+        function rotateAndFlipCanvasContext(ctx, width, height) {
+            ctx.translate(width / 2, height / 2);
+            ctx.rotate(Math.PI); // Rotate 180 degrees
+            ctx.scale(-1, 1); // Flip horizontally
+            ctx.translate(-width / 2, -height / 2);
+        }
+        
         async function processPng2Tga(file) {
             console.log('Starting PNG to TGA conversion for:', file.name);
             return new Promise((resolve, reject) => {
@@ -87,6 +94,7 @@
                         canvas.height = imgBitmap.height;
 
                         const ctx = canvas.getContext('2d');
+                        rotateAndFlipCanvasContext(ctx, canvas.width, canvas.height); // Rotate the canvas
                         ctx.drawImage(imgBitmap, 0, 0);
 
                         // Flip the image vertically if needed
