move images to dirs for better org

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="container">
         <div class="row">
-            <a href="pak/" class="clickable-div"><img src="pak.png">PAK Tool</a>
-            <a href="namemaker/" class="clickable-div"><img src="namemaker.png">Name Maker</a>
+            <a href="pak/" class="clickable-div"><img src="pak/pak.png">PAK Tool</a>
+            <a href="namemaker/" class="clickable-div"><img src="namemaker/namemaker.png">Name Maker</a>
         </div>
         <div class="row">
             <a href="lmp/" class="clickable-div"><img src="lmp/lmp.png">LMP Creator</a>
