add listings for each dir

--- a/maps/H/index.html
+++ b/maps/H/index.html
@@ -46,7 +46,7 @@
     <script>
         const user = 'q1tools'; // Your GitHub username
         const repo = 'q1tools.github.io'; // Your repository name
-        const path = 'maps/0-9'; // Path to the directory in your repository
+        const path = 'maps/H'; // Path to the directory in your repository
 
         document.getElementById('directoryHeading').textContent += path;
 
